test/tests/stages/18_structures/invalid_types/extra_credit/union_tag_resolution/union_type_shadows_struct.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  struct
  identifier(u)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(u)
  ;
  union
  identifier(u)
  identifier(my_union)
  ;
  return
  const int(0)
  ;
  }
